--- a/server/Untitled.ipynb
+++ b/server/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -13,24 +13,21 @@
     "\n",
     "MONGODB_URI = 'mongodb://oran:1234@ds139715.mlab.com:39715/nashim' \n",
     "\n",
-    "def getAllWords():\n",
+    "def getAllWords(word,amount):\n",
+    "\n",
     "\n",
     "    client = pymongo.MongoClient(MONGODB_URI)\n",
     "\n",
     "    db = client.get_default_database()\n",
-    "\n",
+    "    \n",
     "    songs = db['words']\n",
     "\n",
-    "    cursor = songs.find()\n",
+    "    newAmount = songs.find_one({\"word\": word})['amount']+ amount\n",
+    "    query = {\"word\":\"זונה\"}\n",
+    "    songs.update_one(query, {'$set': {'amount': newAmount}})\n",
     "\n",
-    "    data = {}\n",
-    "    for doc in cursor:         \n",
-    "        print(doc['word'])\n",
-    "\n",
-    "    print(data)\n",
-    "    return cursor\n",
-    "    \n",
-    "    client.close()\n"
+    "    client.close()\n",
+    "getAllWords(\"זונה\",1)"
    ]
   },
   {
